fix random white space on right of webpage

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,6 +6,11 @@ font-family: 'Libre Franklin', sans-serif;
 font-family: 'Raleway', sans-serif;
 */
 
+body{
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
 /*---------------------------  Intro ------------------------*/
 
 .h-intro{
